<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.suweiyue.mahjong.MainActivity" >

    <Button
        android:id="@+id/button_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_center" />

    <Button
        android:id="@+id/button_north"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/button_north" />

    <TextView
        android:id="@+id/textview_north"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button_north"
        android:layout_below="@id/button_north"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-30dp"
        android:text="@string/textview_north" />

    <Button
        android:id="@+id/button_south"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/button_south" />

    <TextView
        android:id="@+id/textview_south"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button_south"
        android:layout_below="@id/button_south"
        android:layout_marginLeft="16dp"
        android:text="@string/textview_south" />

    <Button
        android:id="@+id/button_west"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_south"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:text="@string/button_west" />

    <TextView
        android:id="@+id/textview_west"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button_west"
        android:layout_below="@id/button_west"
        android:layout_marginLeft="16dp"
        android:text="@string/textview_west" />

    <Button
        android:id="@+id/button_east"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_south"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:text="@string/button_east" />

    <TextView
        android:id="@+id/textview_east"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button_east"
        android:layout_below="@id/button_east"
        android:layout_marginLeft="16dp"
        android:text="@string/textview_east" />



</RelativeLayout>